# serving

./: .gitignore  CMakeLists.txt  README.md  python_backend_doc.md
.github/workflows/: speed.yml  speed_test.yml  test.yml
ci/: Dockerfile  Dockerfile.serving  build.sh  install_dependency.sh  requirement.txt  run_tests.sh
ci/speed/: README.md  clean.sh  config.pbtxt  export_models.py  models.py  models.sh  parse.py  speed.py  speed_test.py
ci/test/: requirement.txt  run_tests.sh
ci/test_resnet50_oneflow/: test.sh
cmake/: liboneflow.cmake  oneflow_lite.cmake  oneflow_xrt.cmake  triton.cmake
cmake/ci/: oneflow-cuda-75.cmake  oneflow-cuda.cmake
doc/: build.md  command_line_tool.md  know_issues.md  model_config.md  triton_wrapper.md  tutorial.md
docker/: Dockerfile  Dockerfile.base  Dockerfile.build_of  Dockerfile.dev  Dockerfile.final  Dockerfile.final_with_python  Dockerfile.of  Dockerfile.serving
examples/: client.py
examples/resnet50/: config.pbtxt
examples/resnet50_oneflow/: client.py
examples/resnet50_python/: config.pbtxt  export_model.py
examples_embedding/embedding/: client.py  config.pbtxt
include/triton/: model_state.h  oneflow_utils.h  oneflow_xrt_utils.h
liboneflow-test/: CMakeLists.txt  main.cpp
oneflow-backend/: .gitignore  CMakeLists.txt  LICENSE  README.md
oneflow-backend/ci/: Dockerfile  run_tests.sh
oneflow-backend/cmake/: TritonOneFlowBackendConfig.cmake.in
oneflow-backend/docker/: Dockerfile  build.sh
oneflow-backend/examples/: client.py
projects/sd/: Dockerfile  (+1 more)
python_docker/: Dockerfile
src/: model_state.cpp
(+65 files in other folders)
